# ompybind11

./: .envrc  CMakeLists.txt  README.md
ompybind11/: CMakeLists.txt  ompybind11.cpp  test.py
